2016-07-13  Enrica Casucci  <enrica@apple.com>

        Update supported platforms in xcconfig files to match the sdk names.
        https://bugs.webkit.org/show_bug.cgi?id=159728

        Reviewed by Tim Horton.

        * Configurations/Base.xcconfig:

2016-07-13  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] WebKitGtk+ uses too many file descriptors
        https://bugs.webkit.org/show_bug.cgi?id=152316

        Reviewed by Michael Catanzaro.

        Add helper functions to duplicate a file descriptor setting close on exec flag, and also to set close on exec
        flag to an existing file descriptor.

        * wtf/UniStdExtras.h:
        * wtf/UniStdExtras.cpp
        (WTF::setCloseOnExec):
        (WTF::dupCloseOnExec):

2016-07-12  Benjamin Poulain  <bpoulain@apple.com>

        [JSC] Array.prototype.join() fails some conformance tests
        https://bugs.webkit.org/show_bug.cgi?id=159657

        Reviewed by Saam Barati.

        * wtf/text/AtomicString.cpp:
        (WTF::AtomicString::number):
        * wtf/text/AtomicString.h:

2016-07-12  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r203131.
        https://bugs.webkit.org/show_bug.cgi?id=159698

        This change caused an existing LayoutTest to time out on debug
        testers (Requested by ryanhaddad on #webkit).

        Reverted changeset:

        "[JSC] Array.prototype.join() fails some conformance tests"
        https://bugs.webkit.org/show_bug.cgi?id=159657
        http://trac.webkit.org/changeset/203131

2016-07-12  Filip Pizlo  <fpizlo@apple.com>

        platformUserPreferredLanguages on Mac should not try to put the region into the language
        https://bugs.webkit.org/show_bug.cgi?id=159693

        Rubber stamped by Alexey Proskuryakov.
        
        Currently, navigator.language is the thing that we use as the BCP-47 tag in our Intl code
        when certain APIs are called without a locale argument.  That mostly makes sense, and is