@@ -1,3 +1,15 @@
+2016-07-13  Myles C. Maxfield  <mmaxfield@apple.com>
+
+        Addressing post-review comments after r203119
+        https://bugs.webkit.org/show_bug.cgi?id=159749
+
+        Unreviewed.
+
+        * wtf/text/StringView.h:
+        (WTF::StringView::CodePoints::Iterator::Iterator):
+        (WTF::StringView::CodePoints::Iterator::operator*):
+        (WTF::StringView::CodePoints::Iterator::operator==):
+
 2016-07-13  Enrica Casucci  <enrica@apple.com>
 
         Update supported platforms in xcconfig files to match the sdk names.
